# robonomics-winter-school-2018

./: .gitignore  README.md  fetchNixpkgs.nix  index.html  release.nix
css/: app.508d19c6.css  chunk-vendors.1b9a10c5.css
fuji_weather/: CMakeLists.txt  LICENSE  default.nix  package.xml  setup.py
fuji_weather/launch/: trader.launch  worker.launch
fuji_weather/scripts/: trader_node  worker_node
fuji_weather_acl/: CMakeLists.txt  README.md  package.xml
fuji_weather_acl/launch/: trader.launch  worker.launch
fuji_weather_acl/scripts/: trader_node  worker_node
fuji_weather_dapp/: .eslintrc.js  README.md  agents.txt  index.html  model.txt  package.json
fuji_weather_dapp/public/: index.html
fuji_weather_dapp/src/: App.vue  config.js  main.js
iot_agent/: CMakeLists.txt  objective.bag  package.xml
iot_agent/launch/: trader.launch  worker.launch
iot_agent/scripts/: trader_node  worker_node
js/: app.1677195b.js  app.1677195b.js.map  app.25515881.js  app.25515881.js.map  app.48cff733.js  app.48cff733.js.map  app.7361fcff.js  app.7361fcff.js.map  app.927a9ea3.js  app.927a9ea3.js.map  chunk-vendors.13984933.js  chunk-vendors.bc7e76bd.js
static/css/: app.19ad588b0fd79f226f600e478058a54c.css  app.19ad588b0fd79f226f600e478058a54c.css.map
static/js/: app.738387a20a4f63d61ac5.js  app.738387a20a4f63d61ac5.js.map  app.76a22658fb1e86d8f7e0.js  app.76a22658fb1e86d8f7e0.js.map  app.95c82ced0309e9a6ad6b.js  app.95c82ced0309e9a6ad6b.js.map  app.d1f246688ac320534763.js  app.d1f246688ac320534763.js.map  app.d673010be8513ffd0d58.js  app.d673010be8513ffd0d58.js.map  app.d7f69c133534adbe1ea4.js  app.d7f69c133534adbe1ea4.js.map  manifest.37a2ecbb1d1b7e6c9ada.js.map  vendor.4023b934a20ec1ed6a42.js  vendor.40e8922ff7719f82f442.js  vendor.74d6966fd6a4f9b0b2a8.js  vendor.a86e8de47fd3a60d2bf1.js
turtlesim_aira/: CMakeLists.txt  README.md  default.nix  fetchNixpkgs.nix  package.xml  setup.py
turtlesim_aira/launch/: trader.launch  worker.launch
turtlesim_aira/robonomics/: genbag_duration.py  genbag_twist.py  robonomics.md  turtlesim_aira_order_allow.model  (+5 more)
(+22 files in other folders)
