<?xml version="1.0"?>
<package format="2">
  <name>autonomous_agent_template</name>
  <version>0.1.0</version>
  <description>Simple modular AIRA example package.</description>
  <author email="a.khssnv@gmail.com">Alisher A. Khassanov</author>
  <maintainer email="akru@aira.life">Alexander Krupenkin</maintainer>
  <license>BSD3</license>
  <!-- <url type="website">http://wiki.ros.org/dummy_aira</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robonomics_msgs</build_depend>
  <build_depend>robonomics_liability</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>robonomics_msgs</build_export_depend>
  <build_export_depend>robonomics_liability</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>robonomics_msgs</exec_depend>
  <exec_depend>robonomics_liability</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
